# blogs

./: Makefile  manage.py  pyproject.toml
blogs_django/: asgi.py  settings.py  urls.py  wsgi.py
blogs_django/blog/: apps.py  forms.py  models.py  views.py
blogs_django/blog/migrations/: 0001_initial.py
