[tool.poetry]
name = "blogs"
version = "0.1.0"
description = ""
authors = ["Barzabel <kochenko1995@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
